Spring Boot 整合 Elasticsearch，实现 function score query 权重分查询

--- a/elasticsearch/spring-cloud-elasticsearch/pom.xml
+++ b/elasticsearch/spring-cloud-elasticsearch/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example.disruptor</groupId>
-	<artifactId>spring-cloud-disruptor</artifactId>
+	<groupId>com.example.elasticsearch</groupId>
+	<artifactId>spring-cloud-elasticsearch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>spring-cloud-disruptor</name>
-	<description>spring-cloud-disruptor</description>
+	<name>spring-cloud-elasticsearch</name>
+	<description>spring-cloud-elasticsearch</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -29,19 +29,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<!-- Spring Boot Elasticsearch 依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
-		<dependency>
-			<groupId>com.lmax</groupId>
-			<artifactId>disruptor</artifactId>
-			<version>3.3.6</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
